[package]
name = "rust-wasm-raf-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.70", features = [
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "console",
    "ImageData",
    "Response"
]}
js-sys = "0.3.70"
gloo="0.11.0"

